--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
     </p>
     <hr />
     <p>
-      Annotation Mono is an idealized handwriting; using letterforms inspired by
-      monospace bitmap fonts, legibility is maximized while retaining a
+      Annotation Mono is an idealized handwriting; using letter forms inspired
+      by monospace bitmap fonts, legibility is maximized while retaining a
       hand-written character.
     </p>
     <p>
@@ -415,8 +415,8 @@
 
     <h2>Language and Symbol Support</h2>
     <p>
-      More language support and additional technical glpyhs are planned for the
-      future, but right now Annotation Mono supports a broad range of
+      More language support and additional technical glyphs are planned for
+      the future, but right now Annotation Mono supports a broad range of
       Latin-based languages -- 377 according to
       <a href="https://github.com/googlefonts/shaperglot">Shaperglot</a>.
     </p>
